# json-log-formatter

./: Cargo.toml
.github/workflows/: rust.yml
src/: log_transformer.rs  main.rs
