[package]
name = "json-log-formatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.1.2"
chrono = "0.4.19"
atty = "0.2"
anyhow = "1.0"
jql = "3.0.7"